# fa_05

./: README.md  pyproject.toml
src/crew_05/: crew.py  main.py
